--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,46 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #eee;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #34495E;
+}
+
+body {
+  background-color: #eee;
+}
+
+table {
+  text-align: left;
+  width: 700px;
+  margin: 50px auto;
+  border-radius: 10px;
+  background-color: #34495E;
+  color: #eee;
+  padding: 5px
+}
+
+th, td:before {
+  color: #dd5;
+}
+
+select, input {
+  margin-bottom: 25px;
+  padding: 10px;
+  width: 150px;
+  border-radius: 5px;
+  border: 0;
+}
+
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-link {
